# gst-openmax

./: .gitignore  AUTHORS  Android.mk  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  example.conf
android/: config.h
build-aux/: git-version-gen  release.mak  update-common
check/: Makefile.am  basic.c  run.sh
check/standalone/: Makefile.am  async_queue.c  core.c
common/: Makefile.am  gst-autogen.sh  release.mak
m4/: Makefile.am  as-compiler-flag.m4  gst-args.m4  gst-check.m4  gst-error.m4  gst.m4
omx/: Android.mk  Makefile.am  gstomx.c  gstomx.conf  gstomx.h  gstomx_aacdec.c  gstomx_aacdec.h  gstomx_aacenc.c  gstomx_aacenc.h  gstomx_adpcmdec.c  gstomx_adpcmdec.h  gstomx_adpcmenc.c  gstomx_adpcmenc.h  gstomx_alsasink.c  gstomx_alsasink.h  gstomx_amrnbdec.c  gstomx_amrnbdec.h  gstomx_amrnbenc.c  gstomx_amrnbenc.h  gstomx_amrwbdec.c  gstomx_amrwbdec.h  gstomx_amrwbenc.c  gstomx_amrwbenc.h  gstomx_audiosink.c  gstomx_audiosink.h  gstomx_avcenc.c  gstomx_avcenc.h  gstomx_base.c  gstomx_base.h  gstomx_base_audiodec.c  gstomx_base_audiodec.h  gstomx_base_filter.c  gstomx_base_filter.h  gstomx_base_sink.c  gstomx_base_sink.h  gstomx_base_src.c  gstomx_base_src.h  gstomx_base_videodec.c  gstomx_base_videodec.h  gstomx_base_videoenc.c  (+47 more)
tests/: .gitignore  Makefile.am  check_async_queue.c  check_gstomx.c  check_libomxil.c  gst-openmax.conf
tests/standalone/: Makefile  Makefile.in  core.c
util/: Android.mk  Makefile.am  async_queue.c  async_queue.h  sem.c  sem.h
